<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SlickController</string>
    <string name="header1">Press connect button to connect your Android device with SlickGame!</string>
    <string name="accelerometerX">X: </string>
    <string name="accelerometerY">Y: </string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="empty">Default</string>

</resources>
