<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.novaims.slickcontroller.application.MainActivity" >

    <TextView
        android:id="@+id/accelerometerYText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/accelerometerXText"
        android:layout_below="@+id/accelerometerXText"
        android:layout_marginTop="16dp"
        android:text="@string/accelerometerY"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/yValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/accelerometerYText"
        android:layout_alignBottom="@+id/accelerometerYText"
        android:layout_alignLeft="@+id/xValue"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/connect" />

    <TextView
        android:id="@+id/xValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connectButton"
        android:layout_marginTop="26dp"
        android:layout_toRightOf="@+id/accelerometerXText"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/accelerometerXText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/xValue"
        android:layout_alignBottom="@+id/xValue"
        android:layout_toLeftOf="@+id/connectButton"
        android:text="@string/accelerometerX"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/header1"
        android:textSize="14sp"
        android:typeface="normal" />

</RelativeLayout>